performed sample tests on best epoch for each model type

--- a/Models/Full data.ipynb
+++ b/Models/Full data.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "a9523414",
+   "execution_count": 1,
+   "id": "ed49dd8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8dae0e0d",
+   "execution_count": 2,
+   "id": "0d82251e",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
        "[1580470 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "5bacafc1",
+   "execution_count": 3,
+   "id": "def6cc99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "151f3677",
+   "execution_count": 4,
+   "id": "6a193d60",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
        "'C:/Users/samma/Desktop/Data science projects/landmark-recognition-2021/Data/train/1/7/6/17660ef415d37059.jpg'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "0516755c",
+   "execution_count": 5,
+   "id": "5d09ff5d",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +303,7 @@
        "[1580470 rows x 3 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,8 +315,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "170b7e9a",
+   "execution_count": 6,
+   "id": "17c6a1c1",
    "metadata": {},
    "outputs": [
     {
@@ -340,10 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab02699d",
+   "execution_count": 7,
+   "id": "785bf4b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1264376 validated image filenames belonging to 81076 classes.\n",
+      "Found 315560 validated image filenames belonging to 65713 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "datagen = ImageDataGenerator(rescale=1/255)\n",
     "\n",
@@ -355,11 +365,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8974310",
+   "execution_count": 8,
+   "id": "b3c7521b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def GAP(predictions, confidence, actuals):\n",
+    "    total = 0\n",
+    "    for i in range(0,len(predictions)):\n",
+    "        if predictions[i] == actuals[i]:\n",
+    "            total += confidence[i]\n",
+    "    GAP = total/len(predictions)\n",
+    "    return GAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea2cc2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Conv2D(16,(3,3),activation='relu', input_shape=(300,300,3)),\n",
+    "    tf.keras.layers.MaxPooling2D(2,2),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(512, activation='relu'),\n",
+    "    tf.keras.layers.Dense(81, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c1f5c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff4326f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='CategoricalCrossentropy', optimizer = 'Adam', metrics = ['Precision'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f7950f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(small_train_generator, epochs = 100, steps_per_epoch=10, validation_data=small_validation_generator, validation_steps=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa951786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history.history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d71af6a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(small_validation_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65ec3d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred=[]\n",
+    "percent = []\n",
+    "for prediction in predictions:\n",
+    "    pred.append(np.unique(small_train.landmark_id)[np.argmax(prediction)])\n",
+    "    percent.append(max(prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4800eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad33b704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35b3a078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GAP(pred,percent,small_valid.landmark_id.values)"
+   ]
   }
  ],
  "metadata": {
